# convert2gabigabi

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  VISION.md  architecture.md  docker-compose.yml  stack.md  tasklist.md
.cursor/rules/: convert2gabigabi-rule.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: eas-build.yml  test.yml  ui-preview.yml
app/: .gitignore  App.tsx  app.json  eas.json  index.web.js  jest.config.js  metro.config.js  package-lock.json  package.json  playwright.config.ts  web-server.js
app/.expo/: devices.json
app/android/: build.gradle  gradle.properties  settings.gradle
app/android/app/: build.gradle
app/e2e/: screenshot.spec.ts
app/fixtures/: test.webm
app/scripts/: generate-fixtures.sh
app/src/__tests__/: FfmpegCompressor.test.ts  FfmpegConverter.test.ts  FfmpegProcessor.test.ts  convertImage.test.ts  ffmpegUtils.test.ts  integration.test.ts  useDiscordCompress.test.ts  useResizeImage.test.ts
app/src/components/: CustomSlider.tsx  ErrorModal.tsx  FileSizeLabel.tsx  ImagePicker.tsx  ResizeSlider.tsx
app/src/domain/: constants.ts  convertImage.ts  useConvertImage.ts  useDiscordCompress.ts  useResizeImage.ts
docs/: VISION.md  architecture.md  build-device.md  ffmpeg_license.md  local-dev-android.md  privacy-policy.html  privacy-policy.md  stack.md  tasklist.md
rust_core/: Cargo.toml  build.rs
rust_core/android/: CMakeLists.txt  build.gradle
rust_core/android/src/main/cpp/: bridge.cpp
rust_core/android/src/main/java/com/gabigabi/: GabiGabiModule.java  GabiGabiPackage.java  RustCore.java
rust_core/docs/: API.md  DEVELOPMENT.md  README.md
rust_core/src/: lib.rs
rust_core/tests/: integration_test.rs
scripts/: build-deploy.sh
(+16 files in other folders)
