[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1.10"
anyhow = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[build-dependencies]
cbindgen = "0.26" 